# Blaze-Face-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cmake.yml  pr_agent.yml
app/: CMakeLists.txt  main.cpp
cmake/: Sanitizers.cmake  Version.cmake
src/: CMakeLists.txt
src/blazeface/: BlazeFace.hpp  CMakeLists.txt
src/blazeface/impl/: BlazeFaceImpl.cpp  BlazeFaceImpl.hpp
src/components/: CMakeLists.txt
src/components/detection/: CMakeLists.txt  FaceDetector.hpp
src/components/detection/impl/frontFace/: FrontFaceDetector.cpp  FrontFaceDetector.hpp
src/components/postprocess/: CMakeLists.txt  DetectionDataExtractor.hpp
src/components/postprocess/impl/boxes/: BoxesExtractor.cpp  BoxesExtractor.hpp
src/components/postprocess/impl/indices/: IndicesExtractor.cpp  IndicesExtractor.hpp
src/components/postprocess/impl/keypoints/: KeypointsExtractor.cpp  KeypointsExtractor.hpp
src/components/postprocess/impl/scores/: ScoresExtractor.cpp  ScoresExtractor.hpp
src/components/preprocess/: CMakeLists.txt  ImagePreparator.hpp
src/components/preprocess/impl/: ImagePreparatorImpl.cpp  ImagePreparatorImpl.hpp
src/faceDetecor/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.hpp  Parameters.hpp
src/factory/: BlazeFaceFactory.hpp  CMakeLists.txt
src/factory/impl/: FrontBlazeFaceFactory.cpp  FrontBlazeFaceFactory.hpp
src/utils/: CMakeLists.txt
src/utils/anchors/: Anchors.cpp  Anchors.hpp  CMakeLists.txt
src/utils/anchors_generator/: AnchorsGenerator.cpp  AnchorsGenerator.hpp  CMakeLists.txt
